# pysecond

./: .example.env  manage.py  pyproject.toml  readme.md
app_instagram/: apps.py  forms.py  models.py  urls.py  views.py
app_instagram/migrations/: 0001_initial.py  0002_alter_picture_description.py  0003_picture_user.py
app_instagram/templates/app_instagram/: base.html  edit.html  index.html  pictures.html  upload.html
killer_instagram/: asgi.py  settings.py  urls.py  wsgi.py
users/: forms.py  urls.py  views.py
users/templates/users/: logout.html  password_reset_complete.html  password_reset_done.html  signin.html  signup.html
