[tool.poetry]
name = "pyfirst"
version = "0.1.0"
description = ""
authors = ["wexist2003 <neoscerberis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
pika = "^1.3.2"
redis = "^5.0.1"
redis-lru = "^0.1.2"
celery = "^5.3.6"
pymongo = {extras = ["srv"], version = "^4.6.1"}
mongoengine = "^0.27.0"
lxml = "^5.1.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
django = "^5.0.2"
pillow = "^10.2.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.28"
pydantic = {extras = ["dotenv"], version = "^2.6.4"}
alembic = "^1.13.1"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptograpghy"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.1"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.39.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
